--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "author": "Abhimanyu, vasudev",
   "type": "commonjs",
-  "main": "./src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
